--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,8 +24,9 @@
 }
 
 #portal-name {
-  font-weight: 400;
+  font-weight: 300;
   margin: 0.5rem 0 1.5rem;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -68,4 +69,26 @@
 
 #employee-form .col-form-label {
   text-align: right;
+}
+
+#toast {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  min-width: 350px;
+  max-width: 500px;
+  z-index: 1051;
+}
+
+#toast > div.toast-header {
+  color: white;
+  margin-bottom: 0;
+}
+
+#toast > div.toast-header.alert {
+  background-color: rgba(255, 99, 99, 0.85);
+}
+
+#toast > div.toast-header.success {
+  background-color: rgb(0, 255, 170);
 }
