--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+html, body, #root {
+  height: 100%;
+}
+
 .popover > .popover-body {
   padding: 15px;
 }
@@ -40,7 +44,8 @@
 }
 
 #main-header {
-  margin: 10px 15px;
+  padding: 10px 15px;
+  margin: 0;
 }
 
 #main-header > h4 {
